Fix style issues and add better responsiveness on smaller screens

--- a/src/styles/IntroductionModal.css
+++ b/src/styles/IntroductionModal.css
@@ -7,7 +7,7 @@ h1 {
   margin-bottom: 16px;
 }
 
-li {
+.instructions-container li {
   font-size: 32px;
   margin-left: 32px;
 }
